@@ -37,11 +37,19 @@
         });
     };
     
-    
     function authenticate(pCode, pCallBack) {
+        var lId             = Config.oauth_client_id,
+            lSecret         = Config.oauth_client_secret,
+            lEnv            = process.env,
+            
+            lClientId       = lEnv.oauth_client_id      || lId,
+            lClientSecret   = lEnv.oauth_client_secret  || lSecret;
+        
+        console.log(lEnv);
+        
         var data = qs.stringify({
-            client_id       : Config.oauth_client_id,
-            client_secret   : Config.oauth_client_secret,
+            client_id       : lClientId,
+            client_secret   : lClientSecret,
             code            : pCode
         });
         
