@@ -96,6 +96,12 @@
                 break;
             case 'kill':
                 process.exit();
+                break;
+            case 'client_id':
+                var lEnv    = process.env,
+                    lConfig = main.config;
+                
+                lResult = lEnv.oauth_client_id || lConfig.oauth_client_id;
         }
         
         return lResult;
